# mint

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: design-always-attest.md  design-caveat-provenance.md  design-key-rotation.md  release-artifacts.md
examples/: mint-demo.env  mint-demo.toml  mint-elide.toml
examples/demo_roles/: demo-attested.json  demo.json
examples/elide_roles/: coord-ro.json  coord-rw.json  volume-ro.json  volume-rw.json
examples/role_templates/: README.md  demo-attested.json  demo.json
src/: admin.rs  attest.rs  audit.rs  auth.rs  caveat.rs  client.rs  config.rs  http.rs  iam.rs  issuance.rs  keyring.rs  lib.rs  macaroon.rs  main.rs  mint_rw.rs  operator.rs  pop.rs  render.rs  role.rs  seal.rs  sealed_cache.rs  serve.rs  session.rs  state.rs  template.rs  tigris.rs  tpc.rs  transport.rs
testdata/: mint-discharge-vectors.json
tests/: admin_discharge.rs  assume_role.rs  demo_attest.rs  discharge_vectors.rs  discharge_verify.rs  enroll.rs  examples_load.rs  render_cli.rs  role_cli.rs  seal.rs  tigris_minter.rs  transport.rs
tests/common/: mod.rs
