# mint is a standalone Cargo workspace. It was extracted from the elide
# repo (https://github.com/soulware/elide) and is deliberately free of
# `elide-*` dependencies.
[workspace]
resolver = "2"

[package]
name = "mint"
# The release version is the git tag, baked into `mint --version` by build.rs
# (passed as MINT_RELEASE_VERSION); this placeholder serves local and CI builds.
# See docs/release-artifacts.md.
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Macaroon-authenticated scoped-credential vending for Tigris (prototype)."
# `mint-e2e` is a feature-gated test harness, not a user-facing binary. Pinning
# the default run target keeps bare `cargo run` resolving to `mint` so the
# harness never surfaces as an ambiguous-binary option.
default-run = "mint"

[features]
# Builds the `mint-e2e` bin: the hermetic daemon harness (FakeMinter +
# local store) that cross-workspace end-to-end tests spawn.
e2e-harness = []

[[bin]]
name = "mint-e2e"
path = "src/bin/mint_e2e.rs"
required-features = ["e2e-harness"]

[dependencies]
arc-swap             = "1"
async-trait          = "0.1"
aws-credential-types = "1"
aws-sigv4            = { version = "1", default-features = false, features = ["sign-http", "http1"] }
axum                 = "0.8"
base64               = "0.22"
blake3               = "1"
bytes                = "1"
chacha20poly1305     = "0.10"
chrono               = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap                 = { version = "4", features = ["derive", "env"] }
ed25519-dalek        = "2"
futures              = "0.3"
http                 = "1"
http-body-util       = "0.1"
hyper                = { version = "1", features = ["client", "http1"] }
hyper-util           = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal           = { version = "0.9", default-features = false, features = ["client"] }
object_store         = { version = "0.11", features = ["aws"] }
quick-xml            = "0.38"
rand_core            = { version = "0.6", features = ["getrandom"] }
reqwest              = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
rmp                  = "0.8"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
thiserror            = "1"
tokio                = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
toml                 = { version = "0.8", default-features = false, features = ["parse"] }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
uuid                 = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.5", features = ["util"] }
